# hotpot

./: CMakeLists.txt  CTKFrameworkApp.pro  README.md  compile.bat  run.bat
PluginPot/: PluginPot.pro  main.cpp  main.cpp_QtCTK
PluginsVegetables/Greet/: greet.pro  greet_impl.cpp  greet_service.h
PluginsVegetables/HelloCTK/: CMakeLists.txt  HelloActivator.cpp  HelloActivator.h  HelloCTK.pro  HelloCTK.qrc  HelloImpl.cpp  HelloImpl.h  HelloService.h
PluginsVegetables/Plate/: CMakeLists.txt  Plate.qrc  PlateActivator.cpp  PlateActivator.h  PlateImpl.cpp  PlateImpl.h
PluginsVegetables/PlateOpenGL/: CMakeLists.txt  MANIFEST.MF  Plate.qrc  PlateActivator.cpp  PlateActivator.h  PlateImpl.cpp  PlateImpl.h  PlateService.h
PluginsVegetables/PlateOpenGL/OpenGLStart/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  OpenGLStart.cpp  OpenGLStart.h  OpenGLTools.cpp  OpenGLTools.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
PluginsVegetables/PlateOpenGL/OpenGLStart/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
PluginsVegetables/RequirePlugin/PluginA/: PluginA.pro  plugin_a_activator.h
PluginsVegetables/RequirePlugin/PluginB/: PluginB.pro
PluginsVegetables/SendEvent/: SendEvent.pro
PluginsVegetables/SendEvent/BlogEventHandler/: BlogEventHandler.pro  blog_event_handler.h
PluginsVegetables/SendEvent/BlogManager/: BlogManager.pro  blog_manager.cpp  blog_manager_activator.cpp  blog_manager_activator.h
PluginsVegetables/SharedLibImport/: CMakeLists.txt  SharedLibPart.cpp  SharedLibPart.h
PluginsVegetables/SignalSlot/: SignalSlot.pro
PluginsVegetables/SignalSlot/BlogEventHandlerUsingSlots/: BlogEventHandlerUsingSlots.pro  blog_event_handler_using_slots_activator.cpp
PluginsVegetables/SignalSlot/BlogManagerUsingSignals/: BlogManagerUsingSignals.pro
PluginsVegetables/Welcome/WelcomeCTK/: WelcomeCTK.pro  welcome_ctk_activator.cpp  welcome_ctk_impl.h
PluginsVegetables/Welcome/WelcomeQt/: WelcomeQt.pro  welcome_qt_impl.h
PluginsVegetables/WelcomeCTK/: WelcomeCTK.pro
PluginsVegetables/WelcomeQt/: WelcomeQt.pro  welcome_qt_activator.cpp
docs/: nmakecfg.md
lib/libCTK/include/DICOM/Core/: ctkDICOMDisplayedFieldGeneratorRuleFactory.cpp  ctkDICOMDisplayedFieldGeneratorRuleFactory.h
lib/libCTK/lib/: CTKCore.lib  CTKPluginFramework.lib  CTKWidgets.exp  org_commontk_configadmin.exp  org_commontk_eventadmin.exp
lib/libglog/lib/: glog.lib
lib/libglog/lib/pkgconfig/: libglog.pc
spices/base64/: Base64.cpp  Base64.h  CMakeLists.txt
spices/dir/: CMakeLists.txt  dirHelper.cpp  dirHelper.h
spices/log/: CMakeLists.txt  logHelper.cpp  logHelper.h  spdlogHelper.cpp  spdlogHelper.h
spices/observer/: CMakeLists.txt  Observer.h  Subject.cpp  Subject.h
spices/system/: CMakeLists.txt  systemHelper.cpp  systemHelper.h
spices/thread/: CMakeLists.txt  ThreadBase.cpp  ThreadBase.h  locker.hpp
spices/time/: CMakeLists.txt  timeHelper.cpp  timeHelper.h
spices/webServer/: CMakeLists.txt  locker.h  task.h  thread_pool.h  webServer.h
